app/pattern-scss/_action-box.scss
// 
// Styles for action box app
//



// Wrapper + animations
// -------------------------------

.app-wrap {
  padding-bottom: $page-section-spacing;
  overflow: hidden;
}

.main-311 {
  @include transition(all ease 0.5s);
  @inlude clearfix();
  padding-bottom: 5px;
  width: 200%!important;


  &.slide-left {
    margin-left: -100%;

    & > .slide-left-2 {
      height: 1px;

      & + .slide-left-2 {
        height: auto;
        min-height: 270px;
      }
    }
  }

  .slide-left-2 {
    float: left;
    width: 50%!important;
    height: auto;
    position: relative;

    & + .slide-left-2 { 
      height: 1px;
    }
  }

  h2:first-child {
    margin-top: 0;
  }
}

// Menu items
// --------------------------------

.nav-contain {
  padding-top: $grid-gutter-width/2;
  padding-bottom: 0;

  .nav-pills {
    margin-bottom: 0;

    li {
      float: left;
      width: 25%;
      padding-right: 1px;
      margin-top: 0!important;

      & ~ li {
        padding-left: 1px;
      }

      &:last-child {
        padding-right: 0;
      }

      a {
        background-color: $gray-base;


        &, &:hover, &:focus {
          color: $white;

          .light-background-main & {
            color: $light-back-main-color;
          }
        }
      }

      &:not(.active) {
        a {
          &:hover, &:focus {
            background: darken($gray, 5%);
          }
        }
      }

      &.active a {
          
        &, &:hover, &:focus {
          color: $white;
          background: $brand-primary;
          
          .light-background-highlight & {
            color: $light-back-highlight-color;
          }
        }
      }
    }
  }
}

// Content
// -------------------------------

.ol-next {
  position: absolute;
  right: $grid-gutter-width/2;
  top: -2px;
}

.content-contain {
  padding-top: $grid-gutter-width/2;
}


// Category Listings
// ------------------------------

$icon-dim: 40px;

.action-box dl {
  padding-left: 0;

  & > dd {
    overflow: hidden;
    border-radius: 4px;
    margin-bottom: 5px;
    position: relative;
    min-height: $icon-dim;

    &:hover {
      background-color: $gray-lightest;
    }

    &.active {
      // border-color: $gray-lighter;
      background-color: none;
      // @include box-shadow(0 2px 3px -1px rgba(0,0,0,0.1));
    }
  }

  h4 {
    margin: 0;
    // font-weight: $medium-weight;

    a {
      &:focus, &:hover {
        text-decoration: none;
      }
    }

    .fa {
      border-radius: 100%;
      width: $icon-dim;
      height: $icon-dim;
      text-align: center;
      line-height: $icon-dim;
      position: absolute;
      left: $grid-gutter-width/2;
      top: $icon-dim * .2;
      color: $font-color-h4;
    }

    .fa ~ span {
      padding-left: $icon-dim + 10px;
    }

    span {
      @extend %normal-link-color;
      padding: ($icon-dim * .42) $grid-gutter-width/2;
      display: block;
      width: 100%;
    }

    .active & {
      padding-bottom: $icon-dim * .21;

      span {
        padding-bottom: $icon-dim * .21;
      }
    }
  }

  dd, li {
    list-style: none;
  }

  ul {
    padding: 0 0 0 ($icon-dim + 10px + 1);

    li {
      margin-bottom: 0.5em;
    }
  }
}


// Forms
// -------------------------------

.action-box {
  form {

    textarea {
      width: 100%
    }

    .has-error {
      .error-message {
        display: block !important;
      }
    }
    .has-success {
      .success-message {
        display: block !important;
      }
    }

    .form-inline {
      .form-group + .btn {
        margin-bottom: 0;
      } 
    }
    
  }

  .track-status {
    text-transform: uppercase;
    font-weight: bold;
  }

}


// Issue report map
// -------------------------------
#issue-map {
  .leaflet-control-mapbox-geocoder {
    position: absolute;
  }

  .leaflet-control-zoom {
    margin-top: 50px;
  }
}


// Issue lookup
// -------------------------------
.issue-status {

  form {
    padding-bottom: .6em;
    border-bottom: 1px solid $gray-lighter;

    .form-group,
    label {
      margin-right: .5em;
    }
  }

  .issue-status-tabs {
   
    ul.nav {
      margin-top: .75em;
      margin-bottom: 0;

      li a {
        background-color: $gray-lightest;
        margin-bottom: .2em;
      }
      li.active a {
        background-color: #d6d7d9 !important;
      }

    }

    img.pull-right {
      margin-left: 1em;
    }
  }

  .tab-content {
    margin-top: 1em;
  }

}



// *
// * Media Queries
// *
// ******************************************************


// Mobile only
// -------------------------
@include respond($xs-only) {

  .action-box {
    // make local headers a little more managable
    h1, h2 {
      font-size: 21px;
    }

    h3, h4 {
      font-size: 18px;
    }
  }

  $icon-dim: 35px;

  .nav-contain .nav-pills li a {
    text-align: center;
    padding-top: 14px;
    padding-bottom: 14px;
    font-size: 25px;
    margin-bottom: 0;

    i {
      width: 100%;
      font-size: 20px;
      width: $icon-dim;
      height: $icon-dim;
      line-height: $icon-dim;
      background-color: rgba(0,0,0,0.1);
      border-radius: 100%;
      display: block;
      margin-left: auto;
      margin-right: auto;
    }
  }
}

// Small up
// -------------------------
@include respond($sm-up) {


  // Wrapper + animations
  // -------------------------------


  .main-311 {

    .slide-left-2 {
      padding-left: $grid-gutter-width/2;
      padding-right: $grid-gutter-width/2;

    }
  }

  .action-box {
    // make local headers a little more managable
    h1, h2 {
      font-size: 30px;
    }

    & > div {
      border: 1px solid $gray-lighter;
    }
  }

  // Menu 
  // --------------------------------
  .nav-contain {

    .nav-pills li {
      text-align: center;

      .fa {
        font-size: 28px;
        display: block;
      }

      a {
        font-family: $headings-font-family;
        font-weight: $medium-weight;
        font-size: 16px;
      }
    }
  }

  // Content
  // -------------------------------

  $icon-dim: 50px;

  .action-box dl {

    & > dd {
      margin-bottom: 8px;
      min-height: $icon-dim;
    }

    h4 {
      font-size: 20px;

      span {
        padding-bottom: $icon-dim * .42;
        padding-top: $icon-dim * .42;
      }

      .fa {
        width: $icon-dim;
        height: $icon-dim;
        line-height: $icon-dim;
        font-size: 30px;
      }

      .fa ~ span {
        padding-left: $icon-dim + 15px;
      }

      .active & {
        padding-bottom: $icon-dim * .21;

        span {
          padding-bottom: $icon-dim * .21;
        }
      }
    }

    ul {
      padding-left: $icon-dim + 15px + 1;
    }
  }

  .ol-next {
    right: $grid-gutter-width;
  }

  .content-contain {
    padding: $grid-gutter-width/2;
  }
}

// Small only
// -------------------------
@include respond($sm-only) {

  // Menu 
  // --------------------------------
  .nav-contain {

    .nav-pills li {
      .fa {
        margin-right: 0!important;
        margin-bottom: 5px;
      }
    }
  }

  // Content
  // -------------------------------

  .action-box dl {

    dd {
      &:nth-child(2n + 1) {
        clear: left;
      }
    }
  }
}

// Medium up
// -------------------------
@include respond($md-up) {

  // Menu 
  // --------------------------------
  .nav-contain {
    padding: $grid-gutter-width $grid-gutter-width 0;

    .nav-pills {
      li {
        
        .fa {
          font-size: 22px;
          display: inline-block;
          vertical-align: middle;
          margin-right: 0.5em;
        }

        span {
          vertical-align: middle;
        }

        a {
          font-size: 18px;
          padding-top: 15px;
          padding-bottom: 15px;
        }
      }
    }
  }

  // Content
  // -------------------------------
  .content-contain {
    padding: $grid-gutter-width $grid-gutter-width;
  }

  .action-box dl {

    dd {
      &:nth-child(3n + 1) {
        clear: left;
      }
    }
  }
}

